# AstronAuth

./: .env.local  .envrc  .gitignore  Cargo.toml  ENVIRONMENT.md  README.md  flake.nix
postgres-compose/: compose.yaml  create-read-only-user.sh
sqitch/: sqitch.conf  sqitch.plan
sqitch/deploy/: initial_migration.sql  test.sql
sqitch/revert/: initial_migration.sql  test.sql
sqitch/verify/: initial_migration.sql  test.sql
src/: api.rs  main.rs
src/auth/: mod.rs
src/auth/query/: mod.rs  openapi.rs  redirect_uri.rs  response_type.rs  scope.rs  test.rs
src/query/: mod.rs  opaque_parameters.rs  parsing.rs  redirect_uri.rs  response_type.rs  scope.rs  test.rs
