[package]
name = "astronauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
poem = { version = "2.0.1", features = ["rustls"] }
poem-openapi = { version = "4.0.1", features = ["chrono"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
