[package]
name = "astronauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
itertools = "0.12.1"
poem = { version = "3.0.0", features = ["rustls", "eyre06"] }
poem-openapi = { version = "5.0.0", features = [
    "chrono",
    "openapi-explorer",
    "uuid",
] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
