[package]
name = "astronauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
axum = { version = "0.7.5", features = ["http2"] }
color-eyre = "0.6.3"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "url", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
